--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -16,3 +16,26 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Andrew-Chen-Wang/github-wiki-action@v4
+
+  convert_via_pandoc:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: create file list
+        id: files_list
+        run: |
+          echo "Lorem ipsum" > lorem_1.md  # create two example files
+          echo "dolor sit amet" > lorem_2.md
+          mkdir output  # create output dir
+          # this will also include README.md
+          echo "files=$(printf '"%s" ' *.md)" > $GITHUB_OUTPUT
+
+      - uses: docker://pandoc/core
+        with:
+          args: --output=output/result.pdf ${{ steps.files_list.outputs.files }}
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: output
+          path: output
