ci(wiki): updated pandoc args

--- a/.github/workflows/publish-wiki.yml
+++ b/.github/workflows/publish-wiki.yml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=output/result.pdf ${{ steps.files_list.outputs.files }}
+          args: --pdf-engine=xelatex --output=output/result.pdf ${{ steps.files_list.outputs.files }}
 
       - uses: actions/upload-artifact@v3
         with:
